# gpgpu-kt

./: README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/workflows/: maven_publish.yml
gradle/wrapper/: gradle-wrapper.properties
src/androidMain/cpp/: CMakeLists.txt  opencl.cpp
src/androidMain/cpp/libOpenCL_loader/: CMakeLists.txt
src/androidMain/cpp/libOpenCL_loader/include/: opencl_loader.h
src/androidMain/cpp/libOpenCL_loader/src/: opencl_loader.cpp
src/androidMain/kotlin/com/huskerdev/gpkt/: GPApi.android.kt  GPDevice.android.kt
src/commonMain/kotlin/com/huskerdev/gpkt/: GPApi.kt  GPApiType.kt  GPAst.kt  GPContext.kt  GPDevice.kt  GPEngine.kt  GPGPUAst.kt  GPGPUEngine.kt  GPLibraries.kt  GPModules.kt  (+6 more)
src/commonTest/kotlin/main/: Main.kt
src/commonTest/kotlin/tests/: Invoke.kt  InvokeInterpreter.kt  ParsingTest.kt
src/jvmBenchmark/kotlin/benchmark/: SMA.kt  SMA_CL.kt  SMA_CPU.kt  SMA_CUDA.kt  SMA_INTERPRETER.kt  SMA_JAVAC.kt
src/jvmBenchmark/kotlin/sma/: SMA.kt  SMA_CL.kt  SMA_CPU.kt  SMA_CUDA.kt  SMA_INTERPRETER.kt  SMA_JAVAC.kt
src/jvmBenchmark/kotlin/sma/optimization/: SMA_OPT.kt  SMA_OPT_CL.kt  SMA_OPT_CPU.kt  SMA_OPT_CUDA.kt  SMA_OPT_INTERPRETER.kt  SMA_OPT_JAVAC.kt
src/jvmTest/kotlin/main/: Main.kt
src/jvmTest/kotlin/test/: Main.kt
src/jvmTest/kotlin/tests/: InvokeCL.kt  InvokeCUDA.kt  InvokeJAVAC.kt
src/macosArm64Test/kotlin/: AppleMain.kt
src/macosArm64Test/kotlin/tests/: InvokeMetal.kt
src/main/kotlin/: Main.kt
src/nativeInterop/cinterop/: cuda.def  nvrtc.def  nvrtc.h
(+201 files in other folders)
